Remove mtd-tools dependency, flash_eraseall moved to busybox

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.8.0
 
 Package: v3-format-storage
 Architecture: all
-Depends: mtd-support, mtd-utils
+Depends: mtd-support
 Description: Hanlin V3 "storage" formatter
  This package contains initscript which formats V3 "storage" partition
  after reflashing.
